gen/graph_query_grammarParser.py
# Generated from /home/user/PycharmProjects/formal_languages/query_languages/graph_query_grammar.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class graph_query_grammarParser ( Parser ):

    grammarFileName = "graph_query_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "';'", "'|'", "'.'", 
                     "'*'", "'+'", "'?'", "'-'", "'>'", "'='", "'ID'", "'COUNT'", 
                     "'COUNT_NEIGHBOURS'", "'ISOLATED'", "'SINGULAR'", "'ADJACENT'", 
                     "'EXISTS'", "'FROM'", "'SELECT'", "'WRITE'", "'WHERE'", 
                     "'LIST'", "'ALL'", "'GRAPHS'", "'CONNECT'", "'RANDOM'", 
                     "'TO'", "'_'" ]

    symbolicNames = [ "<INVALID>", "Lbr", "Rbr", "Comma", "Semi", "Mid", 
                      "Dot", "Op_star", "Op_plus", "Op_q", "Op_minus", "Op_gr", 
                      "Op_eq", "Kw_id", "Kw_count", "Kw_count_neighbours", 
                      "Kw_isolated", "Kw_singular", "Kw_adjacent", "Kw_exists", 
                      "Kw_from", "Kw_select", "Kw_write", "Kw_where", "Kw_list", 
                      "Kw_all", "Kw_graphs", "Kw_connect", "Kw_random", 
                      "Kw_to", "Underscore", "Ident", "Int", "Nt_name", 
                      "String", "WS" ]

    RULE_script = 0
    RULE_stmt = 1
    RULE_named_pattern = 2
    RULE_select_stmt = 3
    RULE_obj_expr = 4
    RULE_vs_info = 5
    RULE_where_expr = 6
    RULE_v_expr = 7
    RULE_pattern = 8
    RULE_alt_elem = 9
    RULE_seq = 10
    RULE_seq_elem = 11
    RULE_prim_pattern = 12

    ruleNames =  [ "script", "stmt", "named_pattern", "select_stmt", "obj_expr", 
                   "vs_info", "where_expr", "v_expr", "pattern", "alt_elem", 
                   "seq", "seq_elem", "prim_pattern" ]

    EOF = Token.EOF
    Lbr=1
    Rbr=2
    Comma=3
    Semi=4
    Mid=5
    Dot=6
    Op_star=7
    Op_plus=8
    Op_q=9
    Op_minus=10
    Op_gr=11
    Op_eq=12
    Kw_id=13
    Kw_count=14
    Kw_count_neighbours=15
    Kw_isolated=16
    Kw_singular=17
    Kw_adjacent=18
    Kw_exists=19
    Kw_from=20
    Kw_select=21
    Kw_write=22
    Kw_where=23
    Kw_list=24
    Kw_all=25
    Kw_graphs=26
    Kw_connect=27
    Kw_random=28
    Kw_to=29
    Underscore=30
    Ident=31
    Int=32
    Nt_name=33
    String=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(graph_query_grammarParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graph_query_grammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(graph_query_grammarParser.StmtContext,i)


        def Semi(self, i:int=None):
            if i is None:
                return self.getTokens(graph_query_grammarParser.Semi)
            else:
                return self.getToken(graph_query_grammarParser.Semi, i)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = graph_query_grammarParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.match(graph_query_grammarParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << graph_query_grammarParser.Kw_select) | (1 << graph_query_grammarParser.Kw_write) | (1 << graph_query_grammarParser.Kw_connect) | (1 << graph_query_grammarParser.Nt_name))) != 0):
                    self.state = 27
                    self.stmt()
                    self.state = 28
                    self.match(graph_query_grammarParser.Semi)
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Kw_connect(self):
            return self.getToken(graph_query_grammarParser.Kw_connect, 0)

        def Kw_to(self):
            return self.getToken(graph_query_grammarParser.Kw_to, 0)

        def String(self):
            return self.getToken(graph_query_grammarParser.String, 0)

        def select_stmt(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Select_stmtContext,0)


        def named_pattern(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Named_patternContext,0)


        def Kw_write(self):
            return self.getToken(graph_query_grammarParser.Kw_write, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = graph_query_grammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [graph_query_grammarParser.Kw_connect]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(graph_query_grammarParser.Kw_connect)
                self.state = 38
                self.match(graph_query_grammarParser.Kw_to)
                self.state = 39
                self.match(graph_query_grammarParser.String)
                pass
            elif token in [graph_query_grammarParser.Kw_select]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.select_stmt()
                pass
            elif token in [graph_query_grammarParser.Nt_name]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.named_pattern()
                pass
            elif token in [graph_query_grammarParser.Kw_write]:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.match(graph_query_grammarParser.Kw_write)
                self.state = 43
                self.select_stmt()
                self.state = 44
                self.match(graph_query_grammarParser.Kw_to)
                self.state = 45
                self.match(graph_query_grammarParser.String)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Nt_name(self):
            return self.getToken(graph_query_grammarParser.Nt_name, 0)

        def Op_eq(self):
            return self.getToken(graph_query_grammarParser.Op_eq, 0)

        def pattern(self):
            return self.getTypedRuleContext(graph_query_grammarParser.PatternContext,0)


        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_named_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_pattern" ):
                listener.enterNamed_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_pattern" ):
                listener.exitNamed_pattern(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamed_pattern" ):
                return visitor.visitNamed_pattern(self)
            else:
                return visitor.visitChildren(self)




    def named_pattern(self):

        localctx = graph_query_grammarParser.Named_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_named_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(graph_query_grammarParser.Nt_name)
            self.state = 50
            self.match(graph_query_grammarParser.Op_eq)
            self.state = 51
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Kw_select(self):
            return self.getToken(graph_query_grammarParser.Kw_select, 0)

        def obj_expr(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Obj_exprContext,0)


        def Kw_from(self):
            return self.getToken(graph_query_grammarParser.Kw_from, 0)

        def String(self):
            return self.getToken(graph_query_grammarParser.String, 0)

        def Kw_where(self):
            return self.getToken(graph_query_grammarParser.Kw_where, 0)

        def where_expr(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Where_exprContext,0)


        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_stmt" ):
                return visitor.visitSelect_stmt(self)
            else:
                return visitor.visitChildren(self)




    def select_stmt(self):

        localctx = graph_query_grammarParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(graph_query_grammarParser.Kw_select)
            self.state = 54
            self.obj_expr()
            self.state = 55
            self.match(graph_query_grammarParser.Kw_from)
            self.state = 56
            self.match(graph_query_grammarParser.String)
            self.state = 57
            self.match(graph_query_grammarParser.Kw_where)
            self.state = 58
            self.where_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Obj_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vs_info(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graph_query_grammarParser.Vs_infoContext)
            else:
                return self.getTypedRuleContext(graph_query_grammarParser.Vs_infoContext,i)


        def Kw_count(self):
            return self.getToken(graph_query_grammarParser.Kw_count, 0)

        def Lbr(self):
            return self.getToken(graph_query_grammarParser.Lbr, 0)

        def Rbr(self):
            return self.getToken(graph_query_grammarParser.Rbr, 0)

        def Kw_exists(self):
            return self.getToken(graph_query_grammarParser.Kw_exists, 0)

        def Kw_isolated(self):
            return self.getToken(graph_query_grammarParser.Kw_isolated, 0)

        def Kw_count_neighbours(self):
            return self.getToken(graph_query_grammarParser.Kw_count_neighbours, 0)

        def Kw_singular(self):
            return self.getToken(graph_query_grammarParser.Kw_singular, 0)

        def Kw_adjacent(self):
            return self.getToken(graph_query_grammarParser.Kw_adjacent, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_obj_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_expr" ):
                listener.enterObj_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_expr" ):
                listener.exitObj_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObj_expr" ):
                return visitor.visitObj_expr(self)
            else:
                return visitor.visitChildren(self)




    def obj_expr(self):

        localctx = graph_query_grammarParser.Obj_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_obj_expr)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [graph_query_grammarParser.Lbr, graph_query_grammarParser.Ident]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.vs_info()
                pass
            elif token in [graph_query_grammarParser.Kw_count]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(graph_query_grammarParser.Kw_count)
                self.state = 62
                self.match(graph_query_grammarParser.Lbr)
                self.state = 63
                self.vs_info()
                self.state = 64
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Kw_exists]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.match(graph_query_grammarParser.Kw_exists)
                self.state = 67
                self.match(graph_query_grammarParser.Lbr)
                self.state = 68
                self.vs_info()
                self.state = 69
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Kw_isolated]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.match(graph_query_grammarParser.Kw_isolated)
                self.state = 72
                self.match(graph_query_grammarParser.Lbr)
                self.state = 73
                self.vs_info()
                self.state = 74
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Kw_count_neighbours]:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(graph_query_grammarParser.Kw_count_neighbours)
                self.state = 77
                self.match(graph_query_grammarParser.Lbr)
                self.state = 78
                self.vs_info()
                self.state = 79
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Kw_singular]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.match(graph_query_grammarParser.Kw_singular)
                self.state = 82
                self.match(graph_query_grammarParser.Lbr)
                self.state = 83
                self.vs_info()
                self.state = 84
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Kw_adjacent]:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.match(graph_query_grammarParser.Kw_adjacent)
                self.state = 87
                self.match(graph_query_grammarParser.Lbr)
                self.state = 88
                self.vs_info()
                self.state = 89
                self.vs_info()
                self.state = 90
                self.match(graph_query_grammarParser.Rbr)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vs_infoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lbr(self):
            return self.getToken(graph_query_grammarParser.Lbr, 0)

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(graph_query_grammarParser.Ident)
            else:
                return self.getToken(graph_query_grammarParser.Ident, i)

        def Comma(self):
            return self.getToken(graph_query_grammarParser.Comma, 0)

        def Rbr(self):
            return self.getToken(graph_query_grammarParser.Rbr, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_vs_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVs_info" ):
                listener.enterVs_info(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVs_info" ):
                listener.exitVs_info(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVs_info" ):
                return visitor.visitVs_info(self)
            else:
                return visitor.visitChildren(self)




    def vs_info(self):

        localctx = graph_query_grammarParser.Vs_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vs_info)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [graph_query_grammarParser.Lbr]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(graph_query_grammarParser.Lbr)
                self.state = 95
                self.match(graph_query_grammarParser.Ident)
                self.state = 96
                self.match(graph_query_grammarParser.Comma)
                self.state = 97
                self.match(graph_query_grammarParser.Ident)
                self.state = 98
                self.match(graph_query_grammarParser.Rbr)
                pass
            elif token in [graph_query_grammarParser.Ident]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(graph_query_grammarParser.Ident)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lbr(self, i:int=None):
            if i is None:
                return self.getTokens(graph_query_grammarParser.Lbr)
            else:
                return self.getToken(graph_query_grammarParser.Lbr, i)

        def v_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graph_query_grammarParser.V_exprContext)
            else:
                return self.getTypedRuleContext(graph_query_grammarParser.V_exprContext,i)


        def Rbr(self, i:int=None):
            if i is None:
                return self.getTokens(graph_query_grammarParser.Rbr)
            else:
                return self.getToken(graph_query_grammarParser.Rbr, i)

        def Op_minus(self, i:int=None):
            if i is None:
                return self.getTokens(graph_query_grammarParser.Op_minus)
            else:
                return self.getToken(graph_query_grammarParser.Op_minus, i)

        def pattern(self):
            return self.getTypedRuleContext(graph_query_grammarParser.PatternContext,0)


        def Op_gr(self):
            return self.getToken(graph_query_grammarParser.Op_gr, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_where_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_expr" ):
                listener.enterWhere_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_expr" ):
                listener.exitWhere_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhere_expr" ):
                return visitor.visitWhere_expr(self)
            else:
                return visitor.visitChildren(self)




    def where_expr(self):

        localctx = graph_query_grammarParser.Where_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_where_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(graph_query_grammarParser.Lbr)
            self.state = 103
            self.v_expr()
            self.state = 104
            self.match(graph_query_grammarParser.Rbr)
            self.state = 105
            self.match(graph_query_grammarParser.Op_minus)
            self.state = 106
            self.pattern()
            self.state = 107
            self.match(graph_query_grammarParser.Op_minus)
            self.state = 108
            self.match(graph_query_grammarParser.Op_gr)
            self.state = 109
            self.match(graph_query_grammarParser.Lbr)
            self.state = 110
            self.v_expr()
            self.state = 111
            self.match(graph_query_grammarParser.Rbr)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(graph_query_grammarParser.Ident, 0)

        def Underscore(self):
            return self.getToken(graph_query_grammarParser.Underscore, 0)

        def Dot(self):
            return self.getToken(graph_query_grammarParser.Dot, 0)

        def Kw_id(self):
            return self.getToken(graph_query_grammarParser.Kw_id, 0)

        def Op_eq(self):
            return self.getToken(graph_query_grammarParser.Op_eq, 0)

        def Int(self):
            return self.getToken(graph_query_grammarParser.Int, 0)

        def Op_gr(self):
            return self.getToken(graph_query_grammarParser.Op_gr, 0)

        def Kw_random(self):
            return self.getToken(graph_query_grammarParser.Kw_random, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_v_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV_expr" ):
                listener.enterV_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV_expr" ):
                listener.exitV_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV_expr" ):
                return visitor.visitV_expr(self)
            else:
                return visitor.visitChildren(self)




    def v_expr(self):

        localctx = graph_query_grammarParser.V_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_v_expr)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(graph_query_grammarParser.Ident)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(graph_query_grammarParser.Underscore)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(graph_query_grammarParser.Ident)
                self.state = 116
                self.match(graph_query_grammarParser.Dot)
                self.state = 117
                self.match(graph_query_grammarParser.Kw_id)
                self.state = 118
                self.match(graph_query_grammarParser.Op_eq)
                self.state = 119
                self.match(graph_query_grammarParser.Int)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(graph_query_grammarParser.Ident)
                self.state = 121
                self.match(graph_query_grammarParser.Dot)
                self.state = 122
                self.match(graph_query_grammarParser.Kw_id)
                self.state = 123
                self.match(graph_query_grammarParser.Op_gr)
                self.state = 124
                self.match(graph_query_grammarParser.Int)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(graph_query_grammarParser.Kw_random)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alt_elem(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Alt_elemContext,0)


        def Mid(self):
            return self.getToken(graph_query_grammarParser.Mid, 0)

        def pattern(self):
            return self.getTypedRuleContext(graph_query_grammarParser.PatternContext,0)


        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPattern" ):
                return visitor.visitPattern(self)
            else:
                return visitor.visitChildren(self)




    def pattern(self):

        localctx = graph_query_grammarParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pattern)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.alt_elem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.alt_elem()
                self.state = 130
                self.match(graph_query_grammarParser.Mid)
                self.state = 131
                self.pattern()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Alt_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq(self):
            return self.getTypedRuleContext(graph_query_grammarParser.SeqContext,0)


        def Lbr(self):
            return self.getToken(graph_query_grammarParser.Lbr, 0)

        def Rbr(self):
            return self.getToken(graph_query_grammarParser.Rbr, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_alt_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlt_elem" ):
                listener.enterAlt_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlt_elem" ):
                listener.exitAlt_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlt_elem" ):
                return visitor.visitAlt_elem(self)
            else:
                return visitor.visitChildren(self)




    def alt_elem(self):

        localctx = graph_query_grammarParser.Alt_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_alt_elem)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.seq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(graph_query_grammarParser.Lbr)
                self.state = 137
                self.match(graph_query_grammarParser.Rbr)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq_elem(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Seq_elemContext,0)


        def seq(self):
            return self.getTypedRuleContext(graph_query_grammarParser.SeqContext,0)


        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq" ):
                listener.enterSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq" ):
                listener.exitSeq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeq" ):
                return visitor.visitSeq(self)
            else:
                return visitor.visitChildren(self)




    def seq(self):

        localctx = graph_query_grammarParser.SeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_seq)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.seq_elem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.seq_elem()
                self.state = 142
                self.seq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Seq_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_pattern(self):
            return self.getTypedRuleContext(graph_query_grammarParser.Prim_patternContext,0)


        def Op_star(self):
            return self.getToken(graph_query_grammarParser.Op_star, 0)

        def Op_plus(self):
            return self.getToken(graph_query_grammarParser.Op_plus, 0)

        def Op_q(self):
            return self.getToken(graph_query_grammarParser.Op_q, 0)

        def getRuleIndex(self):
            return graph_query_grammarParser.RULE_seq_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq_elem" ):
                listener.enterSeq_elem(self)
